# TmuxAgentOrchestrator

./: .gitignore  AUDIT.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  NOTES.md  README.md  TESTING.ja.md  TESTING.md  USER_GUIDE.ja.md  USER_GUIDE.md  fizzbuzz.py  pyproject.toml  test_fizzbuzz.py
design/: v1.0.11-domain-extraction.md  v1.0.12-slash-commands-worktree.md  v1.0.13-trust-dialog-di.md  v1.0.14-orchestrator-di.md  v1.0.15-application-layer.md  v1.0.16-infrastructure-layer.md  v1.0.17-infrastructure-continued.md  v1.0.18-demo-stability-worktree-integrity.md  v1.0.19-isolate-fix-director.md  v1.0.20-api-worktree-path.md  v1.0.21-started-at-webhook.md  v1.0.22-webhook-retry-env-expansion.md  v1.0.23-delphi-workflow.md  v1.0.24-redblue-workflow.md  v1.0.25-socratic-workflow.md  v1.0.26-stop-hook-fix.md  v1.0.27-pair-workflow.md  v1.0.28-episodic-memory.md  v1.0.29-episode-auto-inject.md  v1.0.30-clean-arch-workflow.md  v1.0.31-ddd-workflow.md  v1.0.32-deliberate-command.md  v1.0.33-arch-quality.md  v1.0.34-process-port-di.md  v1.0.35-orchestrator-infra-di.md  v1.1.0-competition-workflow.md  v1.1.1-paste-preview-fix.md  v1.1.2-user-prompt-submit.md  v1.1.3-prompt-delivery-detection.md  v1.1.4-single-agent-endpoint-worktree-prune.md  v1.1.5-web-router-split.md  v1.1.6-web-routers-split.md  v1.1.7-agent-brief.md
docs/: agent-lifetime.md  architecture.md  context-engineering.md  research-log.md  security.md
examples/: autonomous_strategy_config.yaml  basic_config.yaml  declarative_workflow_config.yaml  director_config.yaml  echo_agent.py
tests/: test_agent_drain.py  (+159 more)
(+227 files in other folders)
