[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tmux-orchestrator"
version = "1.0.34"
description = "Orchestrate AI agents (Claude Code and custom) inside tmux panes"
requires-python = ">=3.11"
dependencies = [
    "libtmux>=0.28",
    "textual>=0.60",
    "fastapi>=0.110",
    "uvicorn[standard]",
    "pyyaml>=6",
    "typer>=0.12",
    "rich>=13",
    "websockets>=12",
    "webauthn>=2",
    "httpx>=0.28.1",
    "prometheus-client>=0.24.1",
    "slowapi>=0.1.9",
    "limits>=3.6",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-exporter-otlp-proto-grpc>=1.24",
]

[project.scripts]
tmux-orchestrator = "tmux_orchestrator.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tmux_orchestrator"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "tests/integration"]
markers = [
    "integration: marks tests that exercise multiple real components together",
    "e2e: marks tests that require a live tmux + claude environment",
]

[dependency-groups]
dev = [
    "hypothesis>=6.151.9",
]
